# SorobanAnchor

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY_296_297_299_300.md  LICENSE  Makefile  README.md  SEP10_AUTH.md
docs/: README.md  error-codes.md
examples/: cli_example.rs  logging_example.rs  request_history_example.rs
scripts/: ci_preflight_check.sh  verify_retry.sh
src/: anchor_health.rs  anchor_info_discovery_tests.rs  capability_detection_tests.rs  config.rs  contract.rs  deterministic_hash.rs  domain_validator.rs  errors.rs  lib.rs  main.rs  rate_limiter.rs  request_id_tests.rs  response_validator.rs  retry.rs  routing_tests.rs  sep10_contract_tests.rs  sep10_jwt.rs  sep10_test_util.rs  sep24.rs  sep38.rs  service_management.rs  session_tests.rs  stellar_toml.rs  stellar_toml_tests.rs  streaming_flow_tests.rs  tracing_span_tests.rs  transaction_state_tracker.rs  webhook.rs
test_snapshots/: test_endpoint_updated_event.1.json  test_get_supported_services_reads_from_profile.1.json  test_profile_endpoint_and_webhook_are_atomic.1.json  test_profile_endpoint_update_overwrites_previous.1.json  test_profile_services_reflected_in_profile.1.json  test_query_registered_attestor.1.json  test_query_revoked_attestor_returns_not_found.1.json  test_register_and_get_webhook_url.1.json  test_register_attestor_duplicate_rejected.1.json  test_register_attestor_invalid_pubkey_length.1.json  test_register_attestor_non_admin_rejected.1.json  test_register_attestor_success.1.json  test_register_webhook_invalid_url_rejected.1.json  test_reregister_revoked_attestor_succeeds.1.json  test_revoke_attestor_success.1.json  test_set_endpoint_invalid_url.1.json  test_set_get_endpoint_happy_path.1.json  test_submit_attestation_after_revocation_rejected.1.json
tests/: anchor_health_metrics_tests.rs  attestation_sig_tests.rs  attestor_endpoint_tests.rs  batch_transaction_tests.rs  capability_detection_tests.rs  load_simulation_tests.rs  metadata_cache_tests.rs  metadata_version_history_tests.rs  network_profile_tests.rs  proof_of_possession_tests.rs  request_id_tests.rs  sep10_test_util.rs  session_tests.rs  streaming_flow_tests.rs  (+2 more)
(+55 files in other folders)
