[package]
name = "anchorkit"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "anchorkit"
path = "src/main.rs"

[features]
default = ["std"]
std = []
wasm = []
mock-only = []

[dependencies]
soroban-sdk = "21.7.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
soroban-sdk = { version = "21.7.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
